[workspace]
members = ["cliplink-cli","cliplink-common", "cliplink-crypto", "cliplink-server", "cliplink-web-client"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
cliplink-common = { path = "./cliplink-common" }
cliplink-crypto = { path = "./cliplink-crypto" }
thiserror = "2.0.17"
tracing = "0.1.43"
