[package]
name = "neon-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
leptos = { version = "0.8", features = ["ssr"] }
leptos_axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
